# CG_Project1

./: .gitignore  CMakeLists.txt  README.md  操作说明.txt
include/glad/: glad.h
lib/: glfw3.lib
resources/: menu.psd  purple.psd
resources/lumine/: lumine.pmx  使用规则.txt
resources/paimon/: paimon.pmx  使用规则.txt
resources/texture/: side1.jpg.diy  side2.jpg.diy  top1.jpg.diy
resources/texure/: side2.jfif  top2.jfif
src/: bazierface.cpp  cursor.cpp  diymodel.cpp  glad.c  main.cpp  mesh.h  model.h  model_rendering.cpp  particles.cpp  shader.h  shader_preloading.cpp  shape.cpp  shape_phase.cpp  skybox.cpp  table.cpp  ui.cpp  新建文本文档.txt
src/headers/: bezierface.h  camera.h  cursor.h  diymodel.h  interface.h  mesh.h  model.h  particles.h  scene.h  settings.h  shader.h  skybox.h  stb_image.h  sun.h  table.h  toolbar.h  ui.h
src/shaders/: cursor.vs  edge.fs  edge.vs  shader.fs  shader.vs  shader_attach.fs  shader_attach.vs  shader_light.vs  shader_model.fs  shader_model.vs  shader_model_2d.fs  shader_particles.fs  shader_particles.vs  shader_smooth.fs  shader_smooth.vs  skybox.fs
userdata/: basic.diy  cup.diy  cup.diy.diy  table.diy.diy  table1.diy  xue
userdata/models/: basic.diy  cap.diy  cap.diy.diy  chair.diy  cup.diy  table.diy  test.diy  test_bottle.diy  test_multitex.diy  test_table.diy
